# ProdSysExample

./: CMakeLists.txt  Example_Electrolux.md  Example_LampManufacturing.md  README.md
src/: CMakeLists.txt  fs_main.cpp  main.cpp
src/Code/: Code.cpp
src/util/: flowshop.hpp  simple.hpp  util.hpp
test/: CMakeLists.txt
test/Code/: codeTest.cpp
